--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "minify": "esbuild abs.js --bundle --minify --legal-comments=none > bundle_only_abs.js && esbuild abs_and_abs2.js --bundle --minify --legal-comments=none > bundle_abs_and_abs2.js"
+    "minify": "esbuild abs.js --bundle --minify --legal-comments=none > bundle_only_abs.js && esbuild abs_and_abs2.js --bundle --minify --legal-comments=none > bundle_abs_and_abs2.js && esbuild abs_by.js --bundle --minify --legal-comments=none > bundle_abs_by.js"
   },
   "repository": {
     "type": "git",
